--- a/.github/workflows/pr-develop-branch.yml
+++ b/.github/workflows/pr-develop-branch.yml
@@ -131,9 +131,7 @@ jobs:
             - name: 'Populate auth file with SFDX_URL secret of integration org'
               shell: bash
               run: |
-              echo "force://PlatformCLI::5Aep8610F.RUa2F48CrNgq_krZOajAcLYKVH4VFH7goewvRdZoTFJ.fF9vM37x8E5iLC9o5.UrFc0C.Dy1VxSIX@satanowski-dev-ed.my.salesforce.com" > ./SFDX_INTEGRATION_URL.txt
-            # echo ${{ secrets.SFDX_INTEGRATION_URL}} > ./SFDX_INTEGRATION_URL.txt
-            # echo "force://PlatformCLI::5Aep8610F.RUa2F48CrNgq_krZOajAcLYKVH4VFH7goewvRdZoTFJ.fF9vM37x8E5iLC9o5.UrFc0C.Dy1VxSIX@satanowski-dev-ed.my.salesforce.com" > ./SFDX_INTEGRATION_URL.txt
+                  echo ${{ secrets.SFDX_INTEGRATION_URL}} > ./SFDX_INTEGRATION_URL.txt
             # Authenticate to org using the URL stored in the text file
             - name: 'Authenticate to Integration Org'
               run: sfdx auth:sfdxurl:store -f ./SFDX_INTEGRATION_URL.txt -s -a integration
@@ -175,6 +173,6 @@ jobs:
             - name: 'Check-only deploy delta changes - run all tests'
               if: ${{ env.APEX_TESTS == 'all' }}
               run: |
-                  sfdx force:source:deploy -p "changed-sources/force-app" --checkonly --testlevel RunLocalTests  --json
+                  sfdx force:source:deploy -p "changed-sources/force-app" --checkonly --testlevelRunLocalTests  --json
             - name: 'Deploy destructive changes (if any)'
-              run: sfdx force:mdapi:deploy -d "changed-sources/destructiveChanges" --checkonly --ignorewarnings 
+              run: sfdx force:mdapi:deploy -d "changed-sources/destructiveChanges" --checkonly --ignorewarnings
