--- a/.github/workflows/push-master-branch.yml
+++ b/.github/workflows/push-master-branch.yml
@@ -50,6 +50,9 @@ jobs:
             # Authenticate to org
             - name: 'Authenticate to Production Org'
               run: sfdx auth:sfdxurl:store -f ./SFDX_PRODUCTION_URL.txt -s -a production
+              
+            - name: 'Deploy the entire branch to Production org'
+              run: sfdx force:source:deploy -p force-app --json
 
             - name: 'Deploy destructive changes (if any) to Production org'
               run: sfdx force:mdapi:deploy -d "changed-sources/destructiveChanges" --checkonly --ignorewarnings 
