modified PS BauyerFull

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -2,12 +2,11 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
 	<types>
 		<members>AccountProcessor</members>
-		<members>AccountProcessorTest</members>
-		<members>DailyLeadProcessor</members>
-		<members>DailyLeadProcessorTest</members>
-		<members>LeadProcessor</members>
-		<members>LeadProcessorTest</members>
 		<name>ApexClass</name>
+	</types>
+	<types>
+		<members>B2BBuyerFull</members>
+		<name>PermissionSet</name>
 	</types>
 	<version>55.0</version>
 </Package>
