--- a/.github/workflows/push-master-branch.yml
+++ b/.github/workflows/push-master-branch.yml
@@ -1,5 +1,5 @@
 # Unique name for this workflow
-name: Deploy master branch to production org
+name: Push to master branch and deploy to production org
 
 # Definition when the workflow should run
 on:
